# wmq-server

./: .gitignore  Cargo.toml  README.md  example_msg.json  example_nc.json
example_commands/: assign_consumer.json  assign_queue.json  declare_queue.json  send_message.json  start_consumer.json
src/: command.rs  consumer.rs  events.rs  main.rs  message.rs  messages.rs  server.rs
