[package]
name = "wmq-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
